# quichat

quichat-client/: Cargo.toml
quichat-client/src/: main.rs
quichat-client/src/modules/: api.rs  api_datatypes.rs  client_datatypes.rs  db_datatypes.rs  mod.rs
quichat-datatypes/: Cargo.toml
quichat-datatypes/src/: api.rs  db.rs  lib.rs
