[package]
name = "webtransport-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wtransport = "0.1.8"
# wtransport = { git = "https://github.com/BiagioFesta/wtransport.git" }
tokio = { version = "1.34.0", features = ["full"] }
rustls = "*"

log = "0.4.20"
env_logger = "0.10.1"

serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
rmp-serde = "1.1.2"

chrono = { version = "0.4.31", features = ["serde"] }
quichat-datatypes = { path = "../quichat-datatypes" }
